Fixed issue with background colours where header box shadow wasn't visible
Set body background colour to same as content section and set margin-top on content section

--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,7 @@ body {
     display: grid;
     grid-template: 10rem 1fr / 18.75rem 1fr;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+	background-color: #bacbe6;
 }
 
 .sidebar {
@@ -88,6 +89,7 @@ body {
 	box-shadow: 0 5px 10px -5px grey;
 	padding: 1rem;
 	gap: 1rem;
+	background-color: white;
 }
 
 .header-top {
@@ -130,6 +132,7 @@ body {
 	grid-template: 1fr 1fr / 1fr 25rem;
 	padding: 1rem;
 	padding-bottom: 4rem;
+	margin-top: 1rem;
 	background-color: #bacbe6;
 }
 
@@ -138,6 +141,7 @@ body {
 	grid-row: 1 / 3;
 	display: grid;
 	grid-template-rows: 5rem 1fr;
+	padding-right: 2rem;
 }
 
 .announcements,
